--- a/src/components/container/Container.module.scss
+++ b/src/components/container/Container.module.scss
@@ -1,4 +1,4 @@
-@import "styles/mixins";
+@import 'styles/mixins';
 
 $container-offset: (2 * $gap) !default;
 $container-max-width: $fullhd !default;
