--- a/src/components/section/Section.module.scss
+++ b/src/components/section/Section.module.scss
@@ -1,4 +1,4 @@
-@import "styles/mixins";
+@import 'styles/mixins';
 
 $section-padding: 3rem 1.5rem !default;
 $section-padding-desktop: 3rem 3rem !default;
