--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,4 +1,5 @@
-html, body {
+html,
+body {
   margin: 0;
   padding: 0;
 }
@@ -14,6 +15,6 @@ a {
   text-decoration: none;
 
   &:hover {
-    color: rgba(0,211,141, 0.8);
+    color: rgba(0, 211, 141, 0.8);
   }
 }
